--- a/src/home/components/PortalMessage.scss
+++ b/src/home/components/PortalMessage.scss
@@ -100,6 +100,11 @@
                         color: #999;
                         font-size: 13px;
                     }
+                    .user-data{
+                        font-size: 13px;
+                        color: var(--thoughtware-gray-500);
+                        padding-top: 3px;
+                    }
                 }
             }
         }
