--- a/src/repository/scan/components/ScanRecord.scss
+++ b/src/repository/scan/components/ScanRecord.scss
@@ -1,6 +1,6 @@
 .scanRecord{
   .scanRecord-top{
-    margin-bottom: 20px;
+    margin-bottom: 15px;
   }
   .scan-play-style{
     display: flex;
@@ -23,7 +23,7 @@
     color: #94979a;
   }
   .scan-data-style {
-    margin-top: var(--xcode-data-top-30);
+    margin-top: var(--gittork-data-top-30);
     .scan-tab-style{
       display: flex;
       gap: 15px;
