--- a/src/setting/deploy/components/EnvDeploy.scss
+++ b/src/setting/deploy/components/EnvDeploy.scss
@@ -6,7 +6,7 @@
     align-items: center;
   }
   .dev-deploy-table{
-    padding-top: var(---xcode-table-top);
+    padding-top: var(--gittork-table-top);
   }
   .dev-deploy-ill{
     margin: var(--thoughtware-padding-item) 0;
