--- a/src/setting/operation/CommitRepository.scss
+++ b/src/setting/operation/CommitRepository.scss
@@ -1,6 +1,6 @@
 .repository{
     .repository-table{
-      padding-top: var(---xcode-table-top);
+      padding-top: var(--gittork-table-top);
     }
   .repository-tables-name{
     display: flex;
