--- a/src/setting/repository/components/UserList.scss
+++ b/src/setting/repository/components/UserList.scss
@@ -1,6 +1,6 @@
 .user-list{
   .user-list-table{
-    padding-top: var(---xcode-table-top);
+    padding-top: var(--gittork-table-top);
   }
   .user-list-tables-name{
     display: flex;
