--- a/src/setting/repository/components/UserRpyList.scss
+++ b/src/setting/repository/components/UserRpyList.scss
@@ -1,6 +1,6 @@
 .user-rpy{
   .user-rpy-table{
-    padding-top: var(---xcode-table-top);
+    padding-top: var(--gittork-table-top);
 
     .user-rpy-table-name{
       display: flex;
