--- a/src/setting/scan/components/ScanRule.scss
+++ b/src/setting/scan/components/ScanRule.scss
@@ -6,6 +6,6 @@
     align-items: center;
   }
   .scanRule-table{
-    padding-top: var(---xcode-table-top);
+    padding-top: var(--gittork-table-top);
   }
 }
