--- a/src/setting/scan/components/ScanRuleDetails.scss
+++ b/src/setting/scan/components/ScanRuleDetails.scss
@@ -6,7 +6,7 @@
     align-items: center;
   }
   .ruleDetails-table{
-    padding-top: var(---xcode-table-top);
+    padding-top: var(--gittork-table-top);
   }
 
   .text-red{
