--- a/src/common/breadcrumb/Breadcrumb.scss
+++ b/src/common/breadcrumb/Breadcrumb.scss
@@ -2,6 +2,8 @@
     z-index: 100;
     font-size: 16px;
     font-weight: var(--thoughtware-font-weight-bold);
+    display: flex;
+    justify-content: space-between;
     .xcode-breadcrumb-content{
         display: flex;
         flex-direction: row;
