--- a/src/home/components/HomePage.scss
+++ b/src/home/components/HomePage.scss
@@ -70,7 +70,7 @@
             }
             .houseRecent-repository{
                 /*flex-wrap: wrap;*/
-                grid-column: span 5 / span 5;
+              /*  grid-column: span 5 / span 5;*/
                 display: flex;
                 gap: 1rem;
                 margin-top: 5px;
@@ -78,7 +78,6 @@
                     display: block;
                     position: relative;
                     box-sizing: border-box;
-                    width: 20%;
                     max-width: 308px;
                     background: #f7f7f7;
                     /*background-image: linear-gradient(rgb(244, 245, 247), transparent 33%);
@@ -114,7 +113,12 @@
                             margin-left: 5px;
                         }
                     }
-
+                }
+                .houseRecent-border-width-20{
+                    width: 20%;
+                }
+                .houseRecent-border-width-25{
+                    width: 25%;
                 }
             }
             .houseRecent-content{
@@ -200,11 +204,12 @@
                     display: flex;
                     align-items: center;
                 }
+
                 .newCommit-text-sym{
                    padding: 0 5px;
                 }
                 .newCommit-text-name{
-                    color: #1890ff;
+
                 }
                 .newCommit-time{
                    color:#9b9b9b;
@@ -215,6 +220,8 @@
                 }
             }
             .text-desc{
+                display: flex;
+                gap: 5px;
                 font-size: 13px;
                 color: var(--thoughtware-gray-500);
             }
