--- a/src/repository/scan/components/ScanPlay.scss
+++ b/src/repository/scan/components/ScanPlay.scss
@@ -6,7 +6,7 @@
     padding-bottom: 10px;
 }
   .scanPlay-data-style{
-    margin-top: var(--xcode-data-top-20);
+    margin-top: var(--gittork-data-top-20);
   }
 
   .icon-style{
