清理大文件界面优化

--- a/src/common/breadcrumb/Breadcrumb.scss
+++ b/src/common/breadcrumb/Breadcrumb.scss
@@ -14,7 +14,7 @@
         padding-right: 8px;
     }
     .xcode-breadcrumb-secondItem{
-        width: calc(100% - 75px);
+        /*width: calc(100% - 75px);*/
         display: inline-block;
         overflow: hidden;
         white-space: nowrap;
