--- a/src/repository/repository/components/RepositoryTable.scss
+++ b/src/repository/repository/components/RepositoryTable.scss
@@ -66,4 +66,9 @@
         align-items:center;
         gap: 5px;
     }
+    .name-text-title{
+        display: flex;
+        gap: 6px;
+        align-items:center;
+    }
 }
