--- a/src/repository/file/components/Blob.scss
+++ b/src/repository/file/components/Blob.scss
@@ -88,8 +88,10 @@
             .blob-editor-content{
                 flex: 1;
                 width: 100%;
+
                 border-left: 1px solid #d9d9d9;
                 border-right: 1px solid #d9d9d9;
+                border-bottom: 1px solid #d9d9d9;
             }
         }
     }
