--- a/src/repository/scan/components/ScanPlay.scss
+++ b/src/repository/scan/components/ScanPlay.scss
@@ -24,15 +24,19 @@
     gap: 10px;
     font-weight:400;
     font-size: 15px;
-  }
-  .last-scan-style{
-    display: flex;
-    margin-top: 10px;
-    gap: 5px;
+    align-items: center;
     .last-scan-text{
       color: #94979a;
       font-size: 13px;
     }
+  }
+  .last-scan-style{
+    display: flex;
+    margin-top: 10px;
+    gap: 10px;
+    color: #1890ff;
+    cursor: pointer;
+    align-items: center;
   }
 
 }
