--- a/src/repository/branch/components/Branch.scss
+++ b/src/repository/branch/components/Branch.scss
@@ -15,6 +15,7 @@
                 flex-direction: row;
                 align-items: center;
                 padding: 8px;
+                gap: 10px;
                 .branch-tables-icon{
                     border: 1px solid #d9d9d9;
                     padding: 8px;
