--- a/src/repository/pipeline/components/Pipeline.scss
+++ b/src/repository/pipeline/components/Pipeline.scss
@@ -1,8 +1,38 @@
 .pipeline{
-    .pipeline-content{
-        height: 100%;
+    .pipeline-head{
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
+    }
+    .pipeline-tab{
+        padding-top: 20px;
+    }
+    .pipeline-content{
+        /*height: 100%;
+        justify-content: center;*/
+        display: flex;
+        flex-direction: column;
+        margin-top: 100px;
+        align-items: center;
+        gap: 15px;
+        .pipeline-content-title{
+            font-size: 16px;
+        }
+    }
+    .pipelineTable-name:hover{
+        color: var(--tiklab-blue);
+        cursor: pointer;
+    }
+}
+.pipeline-number{
+    display: inline-block;
+    color: var(--tiklab-blue);
+    padding: 3px 10px;
+    background: #eeeff9;
+    border-radius: 30px;
+    margin-left: 10px;
+    .pipeline-number-desc{
+        font-size: 14px;
+        padding-left: 5px;
     }
 }
