--- a/src/common/styles/Index.scss
+++ b/src/common/styles/Index.scss
@@ -155,8 +155,9 @@ ul li{
 
 /*antd 下拉框样式修改*/
 .drop-down .ant-select-selector{
-    background-color: #f7f7f7!important;
+    background-color: #efefef!important;
     border:none !important;
+    border-radius:4px;
 }
 
 
